--- a/css/main.scss
+++ b/css/main.scss
@@ -93,6 +93,10 @@
       display: table-cell;
       box-sizing: border-box;
       padding: 10px;
+      >a{
+        color:#07d;
+        text-decoration: none;
+      }
     }
   }
 .pages{
@@ -130,4 +134,50 @@
     }
   }
 }
+
+  .create-list{
+    padding: 0;
+    li{
+      list-style: none;
+      margin-bottom: 15px;
+      >label{
+        display: inline-block;
+        width:120px;
+        height:25px;
+        text-align: right;
+        color:#333;
+        font-size: 14px;
+      }
+      >input:not(.radio){
+        width:289px;
+        height:34px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        color:#555;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+        padding: 6px 12px;
+        box-sizing: border-box;
+      }
+      .radio{
+        width:22px;
+        height:22px;
+        margin-right: 5px;
+        vertical-align: sub;
+      }
+    }
+  }
+  .btn{
+    padding: 7px 35px;
+    border-radius: 2px;
+    border: none;
+    background: #0080ed;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    color:#fff;
+    margin-left: 120px;
+  }
 }
