--- a/css/main.scss
+++ b/css/main.scss
@@ -78,13 +78,14 @@
     font-size: 12px;
     border-collapse:collapse;
 
-    th{
-      border:1px solid #eee;
+    th {
+      border: 1px solid #eee;
       background: #f4f5f9;
       color: #666;
       font-size: 12px;
       padding: 10px;
       font-weight: normal;
+      text-align: center;
     }
     td{
       text-align: center;
