--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,9 @@
       margin-right: 8px;
     }
   }
+  .form-control{
+    display: inline-block;
+  }
   .choose-time,.search{
     display: inline-block;
     margin-right:10px;
@@ -77,7 +80,7 @@
     margin-bottom: 15px;
     font-size: 12px;
     border-collapse:collapse;
-
+    overflow-x: scroll;
     th {
       border: 1px solid #eee;
       background: #f4f5f9;
@@ -86,6 +89,7 @@
       padding: 10px;
       font-weight: normal;
       text-align: center;
+      min-width: 36px;
     }
     td{
       text-align: center;
@@ -94,6 +98,7 @@
       display: table-cell;
       box-sizing: border-box;
       padding: 10px;
+      min-width: 36px;
       >a{
         color:#07d;
         text-decoration: none;
@@ -113,6 +118,14 @@
     &.disabled{
       background-color: #FFF;
       color: #DFDFDF;
+    }
+    &.current{
+      background: #3fb838;
+      border: 1px solid #3fb838;
+      border-radius: 2px;
+      color: #fff;
+      margin: 3px;
+      padding: 5px 10px;
     }
   }
   .sum{
